--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,11 +5,23 @@ theme:
   #features:
   #  - navigation.tabs
   #  - navigation.tabs.sticky
+  features:
+    - content.code.copy
 
 markdown_extensions:
   - pymdownx.arithmatex:
       generic: true
   - attr_list
+  - footnotes
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
+  - pymdownx.blocks.details
+  - pymdownx.blocks.admonition
 
 #nav:
 #  - Home: index.md
