--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,13 +25,13 @@ markdown_extensions:
       pygments_lang_class: true
   - pymdownx.inlinehilite
   - pymdownx.snippets
+  - admonition
+  - pymdownx.details
   - pymdownx.superfences:
         custom_fences:
         - name: mermaid
           class: mermaid
           format: !!python/name:pymdownx.superfences.fence_code_format
-  - pymdownx.blocks.details
-  - pymdownx.blocks.admonition
 
 plugins:
   - search
