--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,30 +1,94 @@
-name: ci 
+name: ci
+
 on:
   push:
     branches:
       - main
+
 permissions:
   contents: write
+
 jobs:
-  deploy:
+  # ── Job 1: validate MATLAB code ─────────────────────────────────────────────
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+      - name: Set up MATLAB
+        uses: matlab-actions/setup-matlab@v2
+        with:
+          release: R2025b
+          cache: true
+
+      # Tests are plain scripts (not matlab.unittest), so use run-command.
+      # A MATLAB error (non-zero exit) will fail this step.
+      - name: Run tests
+        uses: matlab-actions/run-command@v2
+        with:
+          command: |
+            addpath(genpath('src')); cd('tests');
+
+  # ── Job 2: build and deploy documentation ───────────────────────────────────
+  docs:
+    runs-on: ubuntu-latest
+    needs: test
+
+    steps:
+      - uses: actions/checkout@v4
+
       - name: Configure Git Credentials
         run: |
           git config user.name github-actions[bot]
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
+
+      # ── MATLAB ───────────────────────────────────────────────────────────────
+      - name: Set up MATLAB
+        uses: matlab-actions/setup-matlab@v2
+        with:
+          release: R2025b
+          cache: true
+
+      # ── Quarto ───────────────────────────────────────────────────────────────
+      - name: Set up Quarto
+        uses: quarto-dev/quarto-actions/setup@v2
+
+      # ── Python ───────────────────────────────────────────────────────────────
       - uses: actions/setup-python@v5
         with:
           python-version: 3.x
-      - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV 
+
+      - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
+
       - uses: actions/cache@v4
         with:
           key: mkdocs-material-${{ env.cache_id }}
-          path: .cache 
+          path: .cache
           restore-keys: |
             mkdocs-material-
-      - run: pip install mkdocs-material 
-      - run: pip install mkdocstrings-matlab==2.0.1
-      - run: pip install mkdocs-awesome-nav
+
+      - name: Install Python dependencies
+        run: |
+          pip install \
+            mkdocs-material \
+            mkdocstrings-matlab==2.0.0 \
+            mkdocs-awesome-nav \
+            jupyter \
+            git+https://github.com/allefeld/mkernel.git
+
+      ## Register the MATLAB Jupyter kernel so Quarto can find it.
+      ## matlab-actions/setup-matlab prepends MATLAB to PATH, so the kernel
+      ## installer can locate the MATLAB executable automatically.
+      #- name: Register MATLAB Jupyter kernel
+      #  run: python -m matlab_kernel install --user
+
+      # Render all .qmd files under docs/ to commonmark .md files in-place.
+      # MATLAB code blocks are executed live; output is embedded in the .md.
+      # The rendered .md files are then picked up by mkdocs in the next step.
+      - name: Render Quarto docs
+        uses: quarto-dev/quarto-actions/render@v2
+        with:
+          path: docs
+
+      # ── Deploy ───────────────────────────────────────────────────────────────
       - run: mkdocs gh-deploy --force
